add to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 Review-Project/.vs/Review-Project/v17/.suo
 Review-Project/.vs/Review-Project/v17/Browse.VC.opendb
 Review-Project/.vs/Review-Project/v17/.suo
+Review-Project/.vs/Review-Project/v17/.suo
+Review-Project/.vs/Review-Project/v17/.suo
