--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Review-Project/.vs/Review-Project/v17/.suo
 Review-Project/.vs/Review-Project/v17/.suo
 Review-Project/.vs/Review-Project/v17/.suo
 Review-Project/.vs/Review-Project/v17/.suo
+Review-Project/.vs/Review-Project/v17/Browse.VC.db
