--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+Review-Project/.vs
 Review-Project/.vs/Review-Project/v17/.suo
 Review-Project/.vs/Review-Project/v17/Browse.VC.opendb
 Review-Project/.vs/Review-Project/v17/.suo
